# milrouter

./: .devenv.flake.nix  .gitignore  Cargo.toml  README.md  devenv.nix  example.sh  publish.sh  rustfmt.toml
.devenv/: devenv.json  flake.json  input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell  shell-1-link
example/server/: Cargo.toml
example/server/src/: lib.rs  main.rs
example/server/tests/: client_tests.rs  query_tools.rs
example/wasm/: Cargo.toml
example/wasm/src/: lib.rs
router/: Cargo.toml
router/src/: lib.rs  server.rs  wasm.rs
router_macros/: Cargo.toml
router_macros/src/: helpers.rs  lib.rs  macro_impl.rs
router_macros/src/macro_impl/: endpoint.rs  router.rs
