[package]
name = "milrouter_macros"
version = "0.3.1"
edition = "2024"
description = "Macros for the Millennium Router"
repository = "https://github.com/tascord/milrouter"
keywords = ["router", "hyper"]
license = "MIT"
authors = ["Flora Hill"]

[lib]
proc-macro = true

[dependencies]
anyhow = { version = "1.0.99", default-features = false, features = ["std"] }
serde = { version = "1.0.136", features = [
    "derive",
    "rc",
], default-features = false }
heck = "0.5.0"
log = "0.4.22"
mime_guess = "2.0.5"
proc-macro2 = "1.0.86"
quote = "1.0.37"
serde_json = "1.0.127"
syn = { version = "2.0.75", features = ["full"] }
walkdir = "2.5.0"
