[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "1.4.1"
hyper-util = { version= "0.1.11" , features = ["server"] }
http-body-util = "0.1.3"
tokio = "1.47.1"
bytes = "1.10.1"
tracing-subscriber = "0.3.20"

[dependencies.milrouter]
path = "../../router"

[lints]
workspace = true
